--- a/index.html
+++ b/index.html
@@ -19,23 +19,24 @@
       </nav>
     </header>
     <!-- Mission Section -->
-    <div class="container">
-      <div class="mission" id="mission">
-        <h2>Our Mission</h2>
-        <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <div class="main-container">
+      <div class="sub-container">
+        <div class="mission" id="mission">
+          <h2>Our Mission</h2>
+          <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+        </div>
       </div>
+
+
+
+
+
+
+
+
+
+
+
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
   </body>
 </html>
