Finished Featured Section.

--- a/index.html
+++ b/index.html
@@ -13,25 +13,48 @@
         <img src="./resources/images/logo.png"/>
       </div>
       <nav>
-        <span class="mission"><a href="#">Mission</a></span>
-        <span class="featured"><a href="#">Featured Tea</a></span>
+        <span class="mission"><a href="#mission">Mission</a></span>
+        <span class="featured"><a href="#featured">Featured Tea</a></span>
         <span class="locations"><a href="#">Locations</a></span>
       </nav>
     </header>
     <!-- Mission Section -->
     <div class="main-container">
-      <div class="sub-container">
+      <div class="sub-container1">
         <div class="mission" id="mission">
           <h2>Our Mission</h2>
           <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
         </div>
       </div>
-
-
-
-
-
-
+    <!-- Featured Section -->
+      <div class="sub-container2">
+        <div class="featured" id="featured">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
+          <div class="gallery">
+            <div class="photo">
+              <img src="./resources/images/berryblitz.jpg"/>
+              <h4>Fall Berry Blitz Tea</h4>
+            </div>
+            <div class="photo">
+              <img src="./resources/images/rum.jpg"/>
+              <h4>Spiced Rum Tea</h4>
+            </div>
+            <div class="photo">
+              <img src="./resources/images/donut.jpg"/>
+              <h4>Seasonal Donuts</h4>
+            </div>
+            <div class="photo">
+              <img src="./resources/images/myrtle.jpg"/>
+              <h4>Myrtle Ave Tea</h4>
+            </div>
+            <div class="photo">
+              <img src="./resources/images/bedford.jpg"/>
+              <h4>Bedford Bizarre Tea</h4>
+            </div>
+          </div>
+        </div>
+     </div>
 
 
 
