--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img src="./resources/images/logo.png"/>
       </div>
       <nav>
-        <span class="mission"><a href="#mission">Mission</a></span>
-        <span class="featured"><a href="#featured">Featured Tea</a></span>
-        <span class="locations"><a href="#">Locations</a></span>
+        <span class="button"><a href="#">Mission</a></span>
+        <span class="button"><a href="#featured">Featured Tea</a></span>
+        <span class="button"><a href="#locations">Locations</a></span>
       </nav>
     </header>
     <!-- Mission Section -->
@@ -55,11 +55,32 @@
           </div>
         </div>
      </div>
-
-
-
-
-
+     <!-- Location Section -->
+     <div class="locations" id="locations">
+       <h2>Locations</h2>
+       <div class="sub-container3">
+       <div class="box">
+         <h3>Downtown</h3>
+         <p>384 West 4th St</p>
+         <p>Suite 108</p>
+         <p>Portland, Maine</p>
+       </div>
+       <div class="box">
+         <h3>East Bayside</h3>
+         <p>3433 Phisherman's Avenue</p>
+         <p>(Northwest Corner)</p>
+         <p>Portland, Maine</p>
+       </div>
+        <div class="box">
+         <h3>Oakdale</h3>
+         <p>515 Crescent Avenue</p>
+         <p>Second Floor</p>
+         <p>Portland, Maine</p>
+       </div>
+      </div>
     </div>
+    <!-- Contact Section -->
+
+
   </body>
 </html>
