--- a/index.html
+++ b/index.html
@@ -80,7 +80,14 @@
       </div>
     </div>
     <!-- Contact Section -->
-
-
+    <div id="contact" class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.com</h5>
+      <h5>917-555-8904</h5>
+    </div>
+    <!-- Footer Section -->
+    <footer>
+      <h5>&copy;The Tea Cozy 2017</h5>
+    </footer>
   </body>
 </html>
