--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>TeaCozy</title>
     <link href="./resources/css/style.css" type="text/css" rel="stylesheet"/>
-    <link rel="icon" href="#">
+    <link rel="icon" href="./resources/images/icon.jpg">
   </head>
   <body>
     <!-- Header Section -->
